@@ -633,23 +633,23 @@ _printPointerType (struct dbuf_s *oBuf, const char *name, int size)
   if (size == 4)
     {
       if (port->little_endian)
-        dbuf_printf (oBuf, "\t.byte %s,(%s >> 8),(%s >> 16),(%s >> 24)", name, name, name, name);
+        dbuf_printf (oBuf, "\t.byte %s, (%s >> 8), (%s >> 16), (%s >> 24)", name, name, name, name);
       else
-        dbuf_printf (oBuf, "\t.byte (%s >> 24),(%s >> 16),(%s >> 8),%s", name, name, name, name);
+        dbuf_printf (oBuf, "\t.byte (%s >> 24), (%s >> 16), (%s >> 8), %s", name, name, name, name);
     }
   else if (size == 3)
     {
       if (port->little_endian)
-        dbuf_printf (oBuf, "\t.byte %s,(%s >> 8),(%s >> 16)", name, name, name);
+        dbuf_printf (oBuf, "\t.byte %s, (%s >> 8), (%s >> 16)", name, name, name);
       else
-        dbuf_printf (oBuf, "\t.byte (%s >> 16),(%s >> 8),%s", name, name, name);
+        dbuf_printf (oBuf, "\t.byte (%s >> 16), (%s >> 8), %s", name, name, name);
     }
   else
     {
       if (port->little_endian)
-        dbuf_printf (oBuf, "\t.byte %s,(%s >> 8)", name, name);
+        dbuf_printf (oBuf, "\t.byte %s, (%s >> 8)", name, name);
       else
-        dbuf_printf (oBuf, "\t.byte (%s >> 8),%s", name, name);
+        dbuf_printf (oBuf, "\t.byte (%s >> 8), %s", name, name);
     }
 }
 
@@ -674,6 +674,7 @@ printGPointerType (struct dbuf_s *oBuf, const char *iname, const char *oname, in
   if (byte == -1)
     {
       _printPointerType (oBuf, iname, size + 1);
+      dbuf_printf (oBuf, "\n");
     }
   else
     {
@@ -695,11 +696,40 @@ printIvalType (symbol * sym, sym_link * type, initList * ilist, struct dbuf_s *o
   if (ilist && (ilist->type == INIT_DEEP))
     ilist = ilist->init.deep;
 
-  if (!(val = list2val (ilist)))
+  if (!(val = list2val (ilist, FALSE)))
     {
-      // assuming a warning has been thrown
-      val = constCharVal (0);
+      if (!!(val = initPointer (ilist, type)))
+        {
+          int i, size = getSize (type), le = port->little_endian, top = (options.model == MODEL_FLAT24) ? 3 : 2;;         
+          dbuf_printf (oBuf, "\t.byte ");
+          for (i = (le ? 0 : size - 1); le ? (i < size) : (i > -1); i += (le ? 1 : -1))
+            {
+              if (i == 0)
+			    if (val->name && strlen (val->name) > 0)
+                  dbuf_printf (oBuf, "%s", val->name);
+				else
+                  dbuf_printf (oBuf, "#0x00");
+              else if (0 < i && i < top)
+			    if (val->name && strlen (val->name) > 0)
+                  dbuf_printf (oBuf, "(%s >> %d)", val->name, i * 8);
+				else
+                  dbuf_printf (oBuf, "#0x00");				
+              else
+                dbuf_printf (oBuf, "#0x00");
+              if (i == (le ? (size - 1) : 0))
+                dbuf_printf (oBuf, "\n");
+              else
+                dbuf_printf (oBuf, ", ");
+            }
+          return;
+        }
+      else
+        {
+          werrorfl (ilist->filename, ilist->lineno, E_CONST_EXPECTED);
+          val = constCharVal (0);
+        }
     }
+
   if (val->etype && SPEC_SCLS (val->etype) != S_LITERAL)
     {
       werrorfl (ilist->filename, ilist->lineno, E_CONST_EXPECTED);
@@ -809,8 +839,8 @@ printIvalType (symbol * sym, sym_link * type, initList * ilist, struct dbuf_s *o
       // TODO: Print value as comment. Does dbuf_printf support long long even on MSVC?
       dbuf_printf (oBuf, "\n");
       break;
-	default:
-	  wassertl (0, "Attempting to initialize integer of non-handled size.");
+    default:
+      wassertl (0, "Attempting to initialize integer of non-handled size.");
     }
 }
 
@@ -838,7 +868,7 @@ printIvalBitFields (symbol ** sym, initList ** ilist, struct dbuf_s *oBuf)
       else if (!SPEC_BUNNAMED (lsym->etype))
         {
           /* not an unnamed bit-field structure member */
-          value *val = list2val (lilist);
+          value *val = list2val (lilist, TRUE);
 
           if (val && val->etype && SPEC_SCLS (val->etype) != S_LITERAL)
             {
@@ -966,7 +996,7 @@ printIvalChar (symbol * sym, sym_link * type, initList * ilist, struct dbuf_s *o
 
   if (!s)
     {
-      val = list2val (ilist);
+      val = list2val (ilist, TRUE);
       /* if the value is a character string  */
       if (IS_ARRAY (val->type) && IS_CHAR (val->etype))
         {
@@ -1013,7 +1043,7 @@ printIvalArray (symbol * sym, sym_link * type, initList * ilist, struct dbuf_s *
       /* by a string                      */
       if (IS_CHAR (type->next) && ilist->type == INIT_NODE)
         {
-          val = list2val (ilist);
+          val = list2val (ilist, TRUE);
           if (!val)
             {
               werrorfl (ilist->filename, ilist->lineno, E_INIT_STRUCT, sym->name);
@@ -1082,7 +1112,7 @@ printIvalFuncPtr (sym_link * type, initList * ilist, struct dbuf_s *oBuf)
   int size;
 
   if (ilist)
-    val = list2val (ilist);
+    val = list2val (ilist, TRUE);
   else
     val = valCastLiteral (type, 0.0, 0);
 
@@ -1367,6 +1397,7 @@ printIvalPtr (symbol * sym, sym_link * type, initList * ilist, struct dbuf_s *oB
       printGPointerType (oBuf, val->name, sym->name,
                          (IS_PTR (val->type) ? DCL_TYPE (val->type) : PTR_TYPE (SPEC_OCLS (val->etype))));
     }
+
   return;
 }
 
@@ -1531,9 +1562,9 @@ emitStaticSeg (memmap *map, struct dbuf_s *oBuf)
               /* if sym is a simple string and sym->ival is a string,
                  WE don't need it anymore */
               if (IS_ARRAY (sym->type) && IS_CHAR (sym->type->next) &&
-                  IS_AST_SYM_VALUE (list2expr (sym->ival)) && list2val (sym->ival)->sym->isstrlit)
+                  IS_AST_SYM_VALUE (list2expr (sym->ival)) && list2val (sym->ival, TRUE)->sym->isstrlit)
                 {
-                  freeStringSymbol (list2val (sym->ival)->sym);
+                  freeStringSymbol (list2val (sym->ival, TRUE)->sym);
                 }
             }
           else
@@ -2165,8 +2196,9 @@ glue (void)
     {
       /* STM8 note: there is no need to call main().
          Instead of that, it's address is specified in the 
-	 interrupts table and always equals to 0x8080.
-	*/
+         interrupts table and always equals to 0x8080.
+       */
+
       /* entry point @ start of HOME */
       fprintf (asmFile, "__sdcc_program_startup:\n");
 
